# sound-cabinet

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  OCTOPUS.md  README.md  RELEASING.md  add_features.py  analyze_dynamics.py  fix_end.py  fix_mcomp.py  install.sh  midi2sc.py  refactor_dynamics.py  rewrite_multiband.py  rewrite_multiband_linked.py
.github/workflows/: release.yml
docs/: algorithmic-generation.md  expressions.md  instrument-generation.md  master-bus.md  mixing.md  piano-mode.md  roadmap.md  sections-and-patterns.md
examples/: black-glass.sc  bug-chorus.sc  compress-test.sc  concerto2.sc  demo.sc  effects-demo.sc  instrument-demo.sc  lofi-afternoon-v2.sc  lofi-afternoon.sc  neon-cascade.sc  therapy-lofi.sc  three-faces.sc  wave-test.sc  with-demo.sc
examples/voices/: concerto2-kit.sc  drive-kit.sc  instruments.sc  lofi-kit.sc  organic-kit.sc  therapy-kit.sc
issues/documentation-audit-87ef9f7f/: tasks.md
issues/fix-cyclic-section-stack-overflow/: issue.md  tasks.md
patterns/accomp/: alberti-bass.yaml
patterns/bass/: 4bar-anchor.yaml  4bar-walking-chromatic.yaml  octave-pulse.yaml  root-fifth-country.yaml  walking-jazz.yaml
patterns/drums/: basic-rock.yaml  boom-bap.yaml  bossa-nova.yaml  waltz.yaml
patterns/melody/: 4bar-arch.yaml  4bar-consequence.yaml  4bar-sentence.yaml  4bar-wandering.yaml  answer-phrase.yaml  question-phrase.yaml
patterns/motif/: folk-simple.yaml  jazz-exploration.yaml  lullaby.yaml  pop-verse.yaml
patterns/song/: double-refrain.yaml  verse-chorus-bridge.yaml  verse-refrain-folk.yaml
src/: lib.rs  main.rs
(+173 files in other folders)
