[package]
name = "sound-cabinet"
version = "0.1.0"
edition = "2021"

[dependencies]
fundsp = "0.18"
hound = "3.5"
cpal = "0.15"
pest = "2.7"
pest_derive = "2.7"
anyhow = "1"
crossbeam-channel = "0.5"
rand = "0.8"
notify = "6"
crossterm = "0.27"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
